feat: :sparkles: add qrcode
