# goserver/docs/swagger.yaml
@@ -20,6 +20,9 @@ definitions:
         type: string
       path:
         type: string
+    required:
+    - newName
+    - path
     type: object
   request.TxtFile:
     properties:
@@ -29,6 +32,8 @@ definitions:
       path:
         description: 创建文本文件的路径
         type: string
+    required:
+    - path
     type: object
   response.FileInfo:
     description: 文件信息
@@ -59,6 +64,17 @@ definitions:
       data: {}
       msg:
         type: string
+    type: object
+  response.ServerInfoRes:
+    properties:
+      localIpList:
+        description: 本地IP列表
+        items:
+          type: string
+        type: array
+      port:
+        description: 本地端口
+        type: integer
     type: object
 host: 127.0.0.1:7888
 info:
@@ -157,13 +173,33 @@ paths:
       summary: 传入文件夹路径获取文件列表，不传参时返回根列表
       tags:
       - filelist
+  /getServerInfo:
+    get:
+      consumes:
+      - application/json
+      description: 获取本地ip等服务器信息
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 操作成功
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/response.ServerInfoRes'
+              type: object
+      summary: 获取服务器信息
+      tags:
+      - server
   /mkdir:
     post:
       consumes:
       - application/json
-      description: 将文件夹打包，下载完成后删除
+      description: 传入文件夹的路径，新建文件夹
       parameters:
-      - description: 文件夹路径
+      - description: 目录信息
         in: body
         name: data
         required: true
@@ -181,7 +217,7 @@ paths:
                 data:
                   type: object
               type: object
-      summary: 下载文件夹
+      summary: 新建文件夹
       tags:
       - filelist
   /removeItem:
